tests/errors/test_print_args.wyn
fn main() -> int {
    print();
    print("a", "b");
    return 0;
}